sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var m=0
  var n=2
  var sorted=false
  while (sorted!=true){ 

    sorted = true
    for (i<-m to getNombreValeurs()-n){

      if (!plusPetit(i,i+1)){
        sorted=false
        echange(i,i+1)
      }

    }
    n=n+1
    if (sorted=true){
      for (i<- getNombreValeurs()-n to m by -1){

        if (!plusPetit(i,i+1)){
          sorted=false
          echange(i,i+1)
        }

      }
    }

    m=m+1
  }


}
